Sprint19 uat ver3 (#875)
* remove transaction edit component

* adding load_transacttion_types from db in sched_a

* add transaction wrapper component

* edit transaction from report detail; fix circular dependency

* adding loading trans_types from DB to sched_a

* clean up on sched_A/views.py

* adding loading transaction_types from db to sched_b

* added transaction_type_identifier

* fix null in auto-lookup; edit entity changes;

* bugfix

* Disable on change and auto populating on select

* FNE-1286 fix for edit transaction

* suppress warning when tabkey on auto-lookup selected

* adding tran_type loading for sched_b and transaction_util.py

* clean up on fecfiler/sched_A/views.py

* delete transactions wrapper component

* schedL and Transaction Catogery search

* scheduleL  models changes

* changes

* changes

* clean up sched_B/views.py

* schedL changes

* Fne 1384 sprint18 mahendra (#814)

* FNE_!348 changes

* FNE_1348 changes

* FNE_1348 changes

* added version tags to frontend for dev and uat.

* modified Jenkinsfile

* fixed punctuation error

* added specific timezone to date

* added annotations to flyway job

* fix to remove transactionwrapper component import

* Update report-type.service.ts

* Dynamic forms update

* FNE-1392 Caution changed from warning in popup

* FNE 1389 changes update get all transaction API (#821)

* FNE 1384 changes

* FNE 1384 changes

* Fne 1384 sprint18 mahendra (#822)

* FNE_!348 changes

* FNE_1348 changes

* FNE_1348 changes

* Fne jsonbuilder fix (#823)

* Patch notnull constraints (#351)

* CSS fix for transaction screen

* Making view transactions button work

* Code cleanup

* Fne 744 praveen sprint9 (#340)

* Base code of FNE-744

* modified report_id to accept null values and report it as zero

* changes to api to add in try block

* Fne 744 praveen sprint9 (#341)

* Base code of FNE-744

* modified repor

--- a/front-end/src/app/contacts/filter/contacts-filter.component.html
+++ b/front-end/src/app/contacts/filter/contacts-filter.component.html
@@ -4,35 +4,50 @@
   </header>
   <section>
     <div class="contacts__filter-sidebar-set">
+      
       <div class="card">
-        <div class="card-header contacts__filter-title" (click)="toggleTypeFilterItem()">
-          Type
-          <i class="float-right" aria-hidden="true" 
-            [ngClass]="toggleFilterDirection(isHideTypeFilter)">
-          </i>          
-        </div>
-        <div class="card-body" 
-          [@openCloseScroll]="determineScrollState()">            
-          <div class="input-group py-1 transacions__filter-scroll-to-input">
-            <input class="form-control" [(ngModel)]="filterCategoriesText" type="text" 
-              placeholder="Search Type" aria-label="Search">
-            <div class="input-group-append" (click)="scrollToType()">
-              <span class="input-group-text">
-                  <!-- <i class="search-icon text-grey" aria-hidden="true"></i> no longer working?-->
-                  <i class="fas fa-search text-grey" aria-hidden="true"></i>
-              </span>
-            </div>              
-          </div>            
-          <div class="contacts__filter-type-list-body">
-              <ul *ngFor="let categoryGroup of transactionCategories" class="contacts__filter-type-list">
-                <li class="contacts__filter-type-group">{{ categoryGroup.text }}</li>
-                <app-contacts-filter-type
-                  [categoryType]="categoryType"
-                  #categoryElements *ngFor="let categoryType of categoryGroup.options">
-                </app-contacts-filter-type>
-            </ul>
+          <div class="card-header transactions__filter-title" (click)="toggleTypeFilterItem()">
+            Type
+            <i class="float-right" aria-hidden="true" 
+              [ngClass]="toggleFilterDirection(isHideTypeFilter)">
+            </i>          
           </div>
-        </div>
+          <div class="card-body" [@openCloseScroll]="determineScrollType(isHideTypeFilter)">
+            <div class="contacts__filter-type-list-body">
+              <ul class="contacts__filter-type-list">
+                <li *ngFor="let type of types">
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="{{ type?.type_code }}" 
+                      [(ngModel)]="type.selected">
+                    <label class="form-check-label" for="{{ type?.type_code}}">
+                      {{ type?.type_desc }}</label>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+      </div>
+      <div class="card">
+            <div class="card-header transactions__filter-title" (click)="toggleStateFilterItem()">
+              State
+              <i class="float-right" aria-hidden="true" 
+                [ngClass]="toggleFilterDirection(isHideStateFilter)">
+              </i>          
+            </div>
+            <div class="card-body" [@openCloseScroll]="determineScrollState(isHideStateFilter)">
+              <div class="contacts__filter-type-list-body">
+                <ul class="contacts__filter-type-list">
+                  <li *ngFor="let state of states">
+                    <div class="form-check">
+                      <input class="form-check-input" type="checkbox" id="{{ state?.state_code }}" 
+                        [(ngModel)]="state.selected">
+                      <label class="form-check-label" for="{{ state?.state_code}}">
+                        {{ state?.state_code}} - {{ state?.state_description}} </label>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
       </div>
 
     </div> 
