--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
@@ -71,6 +71,9 @@
             font-family: sans-serif;
             font-weight: bold;
           }
+          &.childForm {
+            padding-top: 30px;
+          }
           label {
             display: block;
             padding-bottom: 0.75em;
@@ -81,8 +84,16 @@
               width: 400px;
             }
           }
+          .forms__big_checkbox {
+            -webkit-transform: scale(1.9);
+            -ms-transform: scale(1.9); /* IE */
+            -moz-transform: scale(1.9); /* FF */
+            -webkit-transform: scale(1.9); /* Safari and Chrome */
+            -o-transform: scale(1.9); /* Opera */
+            margin: 10px;
+          }
           label {
-            font-family: 'sans-serif';
+            font-family: sans-serif;
             font-size: 1rem;
           }
           .input-group-prepend {
@@ -110,7 +121,6 @@
             }
           }
           .ng-dropdown-panel {
-            width: 235px;
             .ng-dropdown-panel-items {
               .ng-option {
                 &.ng-option-marked {
