Fne 786 sprint19 mahendra ver2 (#896)
* Update contacts_fields.json

* no need for this file

* contacts view update

* FND 786 changes

* suffiex optional flag added

* Update contacts_fields.json

* FNE 786 changes

* FNE 786 changes

* FNE 786 changes

--- a/front-end/src/app/contacts/addnew/addnew_contacts.component.html
+++ b/front-end/src/app/contacts/addnew/addnew_contacts.component.html
@@ -300,7 +300,7 @@
               <button class="btn btn-previous btn-left" type="button" (click)="cancelStep()">
                 Cancel
               </button>
-              <button class="btn btn-secondary btn-right" type="button"  (click)="doValidateContact()">
+              <button class="btn btn-secondary btn-right" type="button"  (click)="saveAndExit()">
                 Save &amp; Exit
               </button>
             </div>
