--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -58,7 +58,7 @@
 
             <ng-container *ngFor="let col of row.cols">
               <div [class]="row.colClassName" *ngIf="isToggleShow(col)">
-                <div class="form-group"> 
+                <div class="form-group" [style.width]="setSelectTypeWidth(col)"> 
                   <label [for]="col?.name">
                     {{ col?.text }}
                     <button
