--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -395,12 +395,12 @@
                        isFieldName(col?.name, 'cand_office_state'))">  
                     <ng-select
                       (change)="handleStateChange($event, col)"
-                      class="state-select"
+                      class="forms__select"
                       [formControlName]="col?.name"
                       [ngClass]="
                         frmIndividualReceipt.get(col?.name)?.invalid &&
                         (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
-                          ? 'state-select-error'
+                          ? 'forms__select-error'
                           : ''
                       "
                     >
@@ -417,7 +417,7 @@
                       [ngClass]="
                         frmIndividualReceipt.get(col?.name)?.invalid &&
                         (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
-                          ? 'state-select-error'
+                          ? 'forms__select-error'
                           : ''
                       "
                     >
@@ -434,7 +434,7 @@
                       [ngClass]="
                         frmIndividualReceipt.get(col?.name)?.invalid &&
                         (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
-                          ? 'org-type-select-error'
+                          ? 'forms__select-error'
                           : ''
                       "
                     >
