--- a/front-end/src/app/forms/form-3x/report-type/report-type.component.html
+++ b/front-end/src/app/forms/form-3x/report-type/report-type.component.html
@@ -46,8 +46,15 @@
           </div>
         </div>
         <ul class="options-list">
-          <li class="options-list__item pl-0" *ngFor="let committeeReportType of committeeReportTypes; let i = index">
+          <li class="options-list__item pl-0" *ngFor="let committeeReportType of committeeReportTypes; let i = index"
+          (click)="optionsListClick(committeeReportType.report_type)">
+            <label
+              class="child-options-label"
+              style="font-family: Karla, sans-serif !important"
+              for="{{ committeeReportType.report_type }}"
+            >
             <input
+              id="{{ committeeReportType.report_type }}"
               type="radio"
               name="reportTypeRadio"
               [value]="committeeReportType.report_type"
@@ -56,11 +63,6 @@
               (change)="updateTypeSelected($event)"
               formControlName="reportTypeRadio"
             />
-            <label
-              class="child-options-label"
-              style="font-family: Karla, sans-serif !important"
-              for="{{ committeeReportType.report_type_desciption }}"
-            >
               {{ committeeReportType.report_type_desciption }}
             </label>
             <button type="button" class="btn-info" ngbTooltip=" {{ committeeReportType.report_type_info }}">
