--- a/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
@@ -16,9 +16,10 @@
       <li
         [ngClass]="itemSelected === categoryType?.value ? 'form-sidebar-item selected' : 'form-sidebar-item'"
         *ngFor="let categoryType of transactionCategories"
+        (click)="optionsListClick(categoryType?.text)"
       >
         <div class="float-left">
-          <button type="button" class="btn btn-link" value="{{ categoryType?.value }}" (click)="selectItem($event)">
+          <button type="button" id="{{ categoryType?.text }}" class="btn btn-link" value="{{ categoryType?.value }}" (click)="selectItem($event)">
             <i class="plus-icon" aria-hidden="true"></i>
             {{ categoryType?.text }}
           </button>
