mismatch template issue fixed

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -14,13 +14,13 @@
   <ngb-highlight [result]="formatTypeaheadCandidate(r)" [term]="t"></ngb-highlight>
 </ng-template>
 
-<ng-template #rtOrg let-r="result" let-t="term">
+<!--<ng-template #rtOrg let-r="result" let-t="term">
   <ngb-highlight [result]="formatTypeaheadOrgItem(r)" [term]="t"></ngb-highlight>
 </ng-template>
 
 <ng-template #rtCommitteeId let-r="result" let-t="term">
   <ngb-highlight [result]="formatTypeaheadCommitteeId(r)" [term]="t"></ngb-highlight>
-</ng-template>
+</ng-template>-->
 
 <div class="individual-receipt-container">
   <form [formGroup]="frmIndividualReceipt">
